--- a/index.html
+++ b/index.html
@@ -47,9 +47,20 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Amanda Nascimento</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://gist.github.com/frontendmandy" target="_blank"
+            >Amanda Nascimento</a
+          >
+          and is
+          <a
+            href="https://github.com/frontendmandy/Shecodes-project"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a href="https://tubular-horse-2a9860.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
